yaml_parser/tests/fail/bad-indentation-in-mapping.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 3, column 2
  |
3 |  key2: "bad indentation"
  |  ^
expected `...`
